Fix breaks in event list item date fields #95

--- a/src/styles/fossevents.css
+++ b/src/styles/fossevents.css
@@ -298,6 +298,10 @@ h2.navhead {
 
 /* event list/table */
 
+.event-item__date {
+    white-space: nowrap;
+}
+
 table.month {
     margin-bottom: 4rem;
 }
